css changes and fixes bugs in gallery

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <li><a href="#" onclick="onInitMemes(event)">Memes</a></li>
             <li><a href="#" onclick="onInitAbout(event)">About</a></li>
           </ul>
+          <button class="ham-button" onclick="onToggleMenu()">☰</button>
         </nav>
       </header>
       <main>
