--- a/index.html
+++ b/index.html
@@ -112,10 +112,13 @@
             </section>
           </div>
         </div>
+        <article>
+          <footer class="main-footer-container df dc f1 ac">
+            <small>Memes Generator 2022 - Sprint 2</small>
+          </footer>
+      </article>
+      </div>
       </main>
-        <footer class="main-footer-container">
-          <small>Memes Generator 2022 - Sprint 2</small>
-        </footer>
         <script src="js/services/utils-service.js"></script>
         <script src="js/services/storage-service.js"></script>
         <script src="js/services/gallery-service.js"></script>
